--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="assets/style.css" />
-    <script src="assets/script.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -23,7 +22,7 @@
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea>
+          ></textarea>`
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
@@ -32,3 +31,4 @@
     </div>
   </body>
 </html>
+<script src="assets/script.js"></script>
